--- a/anand-bhimjiyani/index.html
+++ b/anand-bhimjiyani/index.html
@@ -92,9 +92,10 @@
 
     <div class="section">
       <p><strong>🎥 A reminder on how to use the assistant in case you get stuck or missed the instructions:</strong></p>
+        <p style="margin-bottom: 30px;">
       <p>To get the smoothest experience, just follow the assistant's lead and reply naturally. If something seems off, try refreshing or reloading. This assistant is just a glimpse of what’s possible — you can explore its full power by clicking 'Apply for Full Demo' below.</p>
 
-      <div style="position: relative; padding-bottom: 65.25%; height: 0;">
+  <div style="position: relative; padding-bottom: 56.25%; height: 0; margin-top: 30px;">
         <iframe src="https://www.loom.com/embed/1b2c79fa5ca64e17b5cd4399fd75f89e?sid=7620b4e3-33fb-434d-8ee2-791da46d4a1c" frameborder="0" allowfullscreen
           style="position: absolute; top: 0; left: 0; width: 90%; height: 90%;">
         </iframe>
