--- a/anand-bhimjiyani/index.html
+++ b/anand-bhimjiyani/index.html
@@ -77,7 +77,7 @@
     </div>
 
     <div class="section">
-      <p><strong>Click “Copy” and paste the summary below into the chatbot when asked.</strong><br>
+      <p><strong>Click “Copy” and paste the summary below into the chat box when asked.</strong><br>
       <span class="note">Please don’t paste it beforehand — the assistant may not be fully ready, and it could cause a glitch.</span></p>
 
       <div style="border: 1px solid #e0dcf7; border-radius: 12px; background: #f5f3fd; padding: 10px 12px; position: relative; font-size: 14px; line-height: 1.5; color: #333; max-height: 120px; overflow-y: auto; box-shadow: 0 1px 4px rgba(0, 0, 0, 0.04);">
@@ -105,7 +105,7 @@
     <div class="section" style="text-align: center;">
       <a class="button" href="https://ai-services-for-healers.com/application">Apply for Full Demo</a>
       <p class="note" style="margin-top: 1rem; max-width: 600px; margin-inline: auto;">
-        This goes beyond a demo — you'll explore more comprehensive training, automation of followups and nurturing, smarter content creation, and personalised support for scaling your business and impact.<br><br>
+        This goes beyond a demo — you'll explore more comprehensive training, automation of followups, smarter content creation, and personalised support for scaling your business and impact.<br><br>
         <strong>Limited availability for those who are serious about growing — not just browsing “cool AI” but truly ready to lead and shine.</strong>
       </p>
     </div>
